# downstream-et-lwa

./: .gitignore  LICENSE  README.md  data_config.example.json  pyproject.toml
downstream_et_lwa/: __init__.py  cli.py  composite_config.py  constants.py  data_registry.py  grid_utils.py  hovmoller.py  significance.py  tracks.py
downstream_et_lwa/budget/: __init__.py  compute_baro_terms.py  compute_dqdt.py  dqdt_to_dtheta_dt.py  dtdt_to_dtheta_dt.py  export_qg_binaries.py  heating_lwa_source.py  strips.py  strips_climatology.py
downstream_et_lwa/capacity/: __init__.py  daily_interpolation.py  merra2_climatology.py  monthly_climatology.py  stationary_a0.py  time_resolved.py
downstream_et_lwa/classification/: __init__.py  mpas_rw.py  rw.py  wb.py
downstream_et_lwa/composites/: __init__.py  build_table_cases.py  io.py  (+12 more)
figures/: fig01_track_map.py  fig02_rwp_lwa_wp_na.py  fig03_lwa_budget_wp_na.py  fig04_lwa_merra2_wp_na.py  fig05_budget_maps_diff.py  fig05_budget_maps_wp_na.py  fig05b_merra2_diabatic_wp_na.py  fig06_budget_maps_rw_strat.py  fig06_budget_maps_rw_strat_diff.py  fig06_budget_maps_wb_strat.py  fig07_rwp_lwa_wb_strat.py  fig08_lwa_budget_rw_strat.py  fig08_lwa_budget_wb_strat.py  fig09_mpas_rwp_lwa.py  fig10_mpas_zonal_budget.py  fig11_mpas_budget_maps.py  fig11_mpas_budget_maps_diff.py  fig12_mpas_rwp_lwa_wp_only.py  fig13_mpas_zonal_budget_wp_only.py  fig14_mpas_budget_maps_wp_only.py  fig14_mpas_budget_maps_wp_only_diff.py  fig15_mpas_rwp_lwa_na_only.py  fig16_mpas_zonal_budget_na_only.py  fig17_mpas_budget_maps_na_only.py  fig18_rwp_lwa_rw_strat.py
(+35 files in other folders)
